# ochain-programs

./: .gitignore  Anchor.toml  Cargo.toml  deploy.sh  package.json  tsconfig.json
.claude/: settings.local.json
cli/: Cargo.toml
cli/src/: config.rs  display.rs  ix.rs  main.rs  pda.rs
docs/: article12-report-template.md  compliance-api.md
programs/ochain-attestation/: Cargo.toml
programs/ochain-attestation/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/ochain-governance/: Cargo.toml
programs/ochain-governance/src/: lib.rs
programs/ochain-identity/: Cargo.toml
programs/ochain-identity/src/: lib.rs
programs/ochain-job/: Cargo.toml
programs/ochain-job/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
programs/ochain-registry/: Cargo.toml
programs/ochain-registry/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
tests/: attestation.ts  registry.ts
