[workspace]
members = [
    "programs/ochain-registry",
    "programs/ochain-attestation",
    "programs/ochain-job",
    "programs/ochain-identity",
    "programs/ochain-governance",
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
opt-level = 3
[profile.release.build-override]
opt-level = 3

[workspace.dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl  = { version = "0.30.1" }
