[package]
name    = "ochain-job"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name       = "ochain_job"

[features]
no-entrypoint  = []
no-idl         = []
no-log-ix-name = []
cpi            = ["no-entrypoint"]
default        = []

[dependencies]
anchor-lang        = { workspace = true }
ochain-attestation = { path = "../ochain-attestation", features = ["cpi"] }
ochain-registry    = { path = "../ochain-registry",    features = ["cpi"] }
